--- a/front/templates/front/base.html
+++ b/front/templates/front/base.html
@@ -1,20 +1,28 @@
 <!-- templates/front/base.html -->
 <!DOCTYPE html>
 {% load static %}
-<html>
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <title>{% block title %}Tytul do zastąpienia {% endblock %}</title>
-    {% block style %}
-    {% endblock style %}
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>{% block title %}Tytul do zastąpienia {% endblock %}</title>
+  {% block style %}
+    <!-- style - base.html -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  {% endblock style %}
 </head>
 <body>
-   <main>
-       {% block content %}
-       {% endblock %}
+  <main>
+    {% block content %}
+      <!-- content - base.html -->
+    {% endblock %}
 
-       {% block javascript %}
-       {% endblock javascript %}
-   </main>
+    {% block scripts %}
+      <!-- scripts - base.html q-->
+      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    {% endblock scripts %}
+  </main>
 </body>
 </html>
