--- a/front/templates/front/base.html
+++ b/front/templates/front/base.html
@@ -8,14 +8,20 @@
   <title>{% block title %}Tytul do zastąpienia {% endblock %}</title>
   {% block style %}
     <!-- style - base.html -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <style>
+      .fakeimg {
+        height: 200px;
+        background: #aaa;
+      }
+    </style>
   {% endblock style %}
 </head>
 <body>
   <main>
     {% block content %}
       <!-- content - base.html -->
-    {% endblock %}
+    {% endblock content%}
 
     {% block scripts %}
       <!-- scripts - base.html q-->
