[ISS-44] login is require to see user decks, flashcards etc
Signed-off-by: Hamilkar247 <adonnibal96@gmail.com>

--- a/front/templates/front/raw.html
+++ b/front/templates/front/raw.html
@@ -3,7 +3,7 @@
 {% load static %}
 {% block content %}
   <!--   content raw.html-->
-<!--  {/% if user.is_authenticated %}-->
+  {% if user.is_authenticated %}
     {% block authenticated %}
       <!-- authenticated raw.html -->
       <div class="jumbotron text-center" style="margin-bottom:0">
@@ -27,13 +27,14 @@
               <li class="active"><a href="/front/decks">Decks</a></li>
               <li><a href="/front/settings">Settings</a></li>
               <li><a href="/front/statistics">Statistics</a></li>
+              <li><a href="{% url 'logout' %}">LogOut</a></li>
             </ul>
           </div>
         </div>
       </nav>
       {{ block.super }}
     {% endblock authenticated %}
-<!--  {/% else %}-->
+  {% else %}
     {% block unauthenticated %}
       <!-- unauthenticated raw.html-->
       <div class="contentttt class" style>
@@ -41,7 +42,7 @@
              <a href="login" class="btn btn-w-m btn-success">Zaloguj się !</a>
       </div>
     {% endblock unauthenticated %}
-<!--  {/% endif %}-->
+  {% endif %}
 {% endblock content %}
 {% block scripts %}
     {{ block.super }}
