[ISS-44] fix - redirect  Log In web
Signed-off-by: Hamilkar247 <adonnibal96@gmail.com>

--- a/front/templates/front/raw.html
+++ b/front/templates/front/raw.html
@@ -39,7 +39,7 @@
       <!-- unauthenticated raw.html-->
       <div class="contentttt class" style>
              <p>Nie jesteś zalogowany!</p>
-             <a href="login" class="btn btn-w-m btn-success">Zaloguj się !</a>
+             <a href="accounts/login" class="btn btn-w-m btn-success">Zaloguj się !</a>
       </div>
     {% endblock unauthenticated %}
   {% endif %}
