[ISS-61] deck_edit.html - page to edit of deck details
Signed-off-by: Hamilkar247 <adonnibal96@gmail.com>

--- a/front/templates/front/deck_menu.html
+++ b/front/templates/front/deck_menu.html
@@ -12,7 +12,7 @@
       <div class="col-sm-8">
         <div class="row">
           <a href="#" class="btn btn-primary btn-sm">Add</a>
-          <a href="#q" class="btn btn-primary btn-sm">Edition</a>
+          <a href="edit" class="btn btn-primary btn-sm">Edit</a>
           <a href="#" class="btn btn-primary btn-sm">Start Game</a>
         </div>
         <table class="table table-bordered" id="table_flashCard" width="100%" cellspacing="0">
@@ -21,7 +21,7 @@
               <th>#id</th>
               <th>Name</th>
               <th>Averse</th>
-              <th>Edition</th>
+              <th>Edit</th>
             </tr>
           </thead>
         </table>
