--- a/front/templates/front/base.html
+++ b/front/templates/front/base.html
@@ -8,7 +8,12 @@
   <title>{% block title %}Tytul do zastąpienia {% endblock %}</title>
   {% block style %}
     <!-- style - base.html -->
+    <link href="{% static 'front/bootstrap/css/dataTables/datatables.min.css' %}" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.22/css/jquery.dataTables.min.css">
+    <link rel="stylesheet" type="text/css" href="{% static 'front/style.css' %}">
+    <link href='https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css' rel='stylesheet' type='text/css'>
+    <link href='https://cdn.datatables.net/buttons/1.6.5/css/buttons.dataTables.min.css' rel='stylesheet' type="text/css">
     <style>
       .fakeimg {
         height: 200px;
@@ -26,8 +31,14 @@
     {% block scripts %}
       <!-- scripts - base.html -->
       <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+      <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+      <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/buttons/1.6.5/js/buttons.colVis.min.js"></script>
+      <script src='{% static "front/bootstrap/js/dataTables/datatables.min.js" %}' type="text/javascript"></script>
+      <script src='{% static "front/bootstrap/js/dataTables/dataTables.bootstrap4.min.js" %}' type="text/javascript"></script>
+      <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/buttons/1.6.5/js/buttons.colVis.min.js"></script>
+      <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.10.23/js/dataTables.bootstrap4.min.js"></script>
       <script>
       {% block generate_revers_url %}
       {% endblock generate_revers_url %}
