--- a/front/templates/front/deck_menu.html
+++ b/front/templates/front/deck_menu.html
@@ -6,24 +6,30 @@
   {{ block.super }}
   <!--  authenticated - deck_menu.html -->
   <div class="container">
-
     <div class="row">
-
       <div class="col-sm-8">
         <div class="row">
           <a href="#" class="btn btn-primary btn-sm">Add</a>
           <a href="edit" class="btn btn-primary btn-sm">Edit</a>
           <a href="#" class="btn btn-primary btn-sm">Start Game</a>
         </div>
-        <table class="table table-bordered" id="table_flashCard" width="100%" cellspacing="0">
+        <table id="table_flashcard" class="table table-striped table-bordered" width="100%" cellspacing="0">
           <thead>
             <tr>
-              <th>#id</th>
-              <th>Name</th>
-              <th>Averse</th>
-              <th>Edit</th>
+              <th>id</th>
+              <th>name</th>
+              <th>averse</th>
+              <th>edit</th>
             </tr>
           </thead>
+          <tfoot>
+            <tr>
+              <th>id</th>
+              <th>name</th>
+              <th>averse</th>
+              <th>edit</th>
+            </tr>
+          </tfoot>
         </table>
         <hr>
       </div>
@@ -32,15 +38,12 @@
 {% endblock authenticated %}
 {% block generate_revers_url %}
   {{ block.super }}
-  <!--  generate_revers_url - decks.html-->
+  <!--  generate_revers_url - deck_menu.html-->
   var revers_urls = {
     front_flashcard: "{% url 'front:flashcard' %}",
-    deck_flashcards: "/api/v1/deck/1/flashCards/",
+    deck_flashcards: "/api/v1/deck/1/flashcards/",
     api_deck: "{% url 'api_v1:deck-list' %}",
-    flashcards: "/flashCards/"
-  }
-  function get_urls(){
-    return revers_urls
+    flashcards: "/flashcards/"
   }
 {% endblock generate_revers_url %}
 {% block scripts %}
