[ISS-42] raw.html - delete harshcode url and implement django reverse url mechanism
Signed-off-by: Hamilkar247 <adonnibal96@gmail.com>

--- a/front/templates/front/raw.html
+++ b/front/templates/front/raw.html
@@ -20,13 +20,13 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/front/dashboard">Dashboard</a>
+            <a class="navbar-brand" href="{% url 'front:dashboard' %}">Dashboard</a>
           </div>
           <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
-              <li class="active"><a href="/front/decks">Decks</a></li>
-              <li><a href="/front/settings">Settings</a></li>
-              <li><a href="/front/statistics">Statistics</a></li>
+              <li class="active"><a href="{% url 'front:deck' %}">Decks</a></li>
+              <li><a href="{% url 'front:settings' %}">Settings</a></li>
+              <li><a href="{% url 'front:statistics' %}">Statistics</a></li>
               <li><a href="{% url 'logout' %}">LogOut</a></li>
             </ul>
           </div>
